gap between main and header is fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ body {
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
-  padding-top: 200px;
+  padding-top: 130px;
 }
 
 /* Search section styling */
